Implement owner-based access control for chat and document management features